Fixed histogram bin labels being hidden vertically when the bin is too small.

--- a/src/webtsainterface/static/css/style.css
+++ b/src/webtsainterface/static/css/style.css
@@ -189,14 +189,6 @@ button span{
     stroke-opacity: 0.8;
 }
 
-/*.bar:hover{
-    opacity:0.7;
-}*/
-
-.bar text {
-  fill: #fff;
-}
-
 line.tick {
     stroke: #cccccc;
     fill:none;
